Feature/draw review (#73)
* refactor(core): remove deprecated classes and contracts for external results and uslottery modules (#66)

- Deleted unused classes, interfaces, and records in `external results` and `uslottery` modules.
- Cleaned up legacy projection catalogs, fetch ports, and utility mappers.
- Aligned with ongoing cleanup of deprecated contracts to streamline core services.

* refactor(service): delete tchalanet-edge-service module and associated files (#67)

- Removed the entire `tchalanet-edge-service` module, including all core, route, channel, and skill files.
- Deleted related templates, decision sets, notification handlers, and rule engines.
- Updated `CLAUDE.md` to align with the removal of the edge-service module.
- Ensured cleanup consistency for APIs, configurations, and accompanying documentation.

* feat(notification): add Slack, Email, and SMS notification support via unified notification service

- Introduced `SendNotificationService` integrating Slack, Brevo Email, and Twilio SMS senders.
- Added `/internal/notifications/send` route with JSON Schema validation.
- Extended environment configuration with relevant provider settings.
- Registered notification service and routes in `tchalanet-edge-service`.
- Added manual test documentation and updated dependencies.

* mobile(app): implement main app structure with routing and theming

* feat(draw): add new draw request models and update existing structures for better handling

* feat(draw): add new draw request models and update existing structures for better handling

* chore(openspec): add project-local OpenSpec structure per autonomous project

- Create openspec/ directories (specs/, changes/, archive/ + .gitkeep) for
  tchalanet-server, apps/tchalanet-web, tchalanet-mobile, tchalanet-edge-service
- Add project.md to each project OpenSpec defining scope and archive rules
- Update root and project CLAUDE.md files with OpenSpec selection rules,
  worktree verification commands, token discipl